utility-apps/authentik/authentik/templates/database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 5432
  egress:
    - {}
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql-hl
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: authentik-postgresql-hl
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: primary
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/instance: authentik
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: authentik-postgresql
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
      containers:
        - name: postgresql
          image: docker.io/library/postgres:17.10-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp-postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "authentik" -d "dbname=authentik" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |-
                  exec pg_isready -U "authentik" -d "dbname=authentik" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: postgresql-extended-config
              mountPath: /bitnami/postgresql/conf/conf.d/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
            - name: postgresql-config
              mountPath: /bitnami/postgresql/conf
            - name: postgresql-socket
              mountPath: /var/run/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-config
          configMap:
            name: authentik-postgresql-configuration
        - name: postgresql-extended-config
          configMap:
            name: authentik-postgresql-extended-configuration
        - name: postgresql-socket
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: local-path
